--- a/My_Website/index.html
+++ b/My_Website/index.html
@@ -29,6 +29,7 @@
             </nav>
             <div class="my-hearder-msg">
                 <h1>Hi, my name is Yuan-Jung (David) Lin <br>Explore more about me!</h1>
+                <h1>My friend, Alex, likes to message people secretly</h1>
                 <a class="btn btn-my-career" href="#">My Career</a>
                 <a class="btn btn-movie" href="#">Movie</a>
             </div>
